horizontal overflow fixed

--- a/css/styles.css
+++ b/css/styles.css
@@ -23,6 +23,7 @@ body {
 	max-width: 1100px;
 	margin-left: auto;
 	margin-right: auto;
+	overflow-x: hidden;
 }
 
 #restaurant-list ul,
